[package]
name = "const_ranged_int"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "Ranged constant integers. Useful for lookup tables with constrained values to avoid secondary bounds check."
readme = "README.md"
repository = "https://github.com/mcroomp/const_ranged_int"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
